@@ -5,6 +5,8 @@ November 18, 2012
 * fixed: undefined rule refs caused exception
 * cleanup, rm dead etypes, add check for ids that cause code gen issues
 * added notion of one-off error
+* added check for v3 backward incompatibilities:
+** tree grammars
 
 November 17, 2012
 
